--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - "assets/images/sushi (1).png"
+    - assets/images/sushi (1).png
+    - assets/menu-imgs/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
